--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	testImplementation("io.cucumber:cucumber-java:7.10.1")
+	testImplementation('io.cucumber:cucumber-junit:7.10.1')
+
 }
 
 jacocoTestCoverageVerification {
@@ -29,6 +32,15 @@ jacocoTestCoverageVerification {
 			}
 		}
 	}
+}
+
+tasks.register('acceptanceTest', Test) {
+	include '**/acceptance/**'
+	systemProperties System.getProperties()
+}
+test {
+	useJUnitPlatform()
+	exclude '**/acceptance/**'
 }
 
 tasks.named('test') {
